# projet-kawakiri

./: .env  .env.example  .gitignore  API_doc.md  API_doc_fr.md  AUTHORS.rst  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  JOSS_publication.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  RULES.md  SECURITY.md  SUPPORT.md  install.bat  install.sh  log_exercice.bash  log_exercice2.bash  log_exercice4.bash  mkdocs.yml  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml  joss-paper.yml
Recherches/: Ressources_bdd.typ
code/: main.py  main_validator.py
code/config/: scoring.py
code/core/: clickhouse_manager.py  client.py  db_client.py  logger.py  manager.py  meta.py  naming.py  schema.py
code/data/: calendar.csv  categories_source.csv  customers.csv  products.csv  sales.csv  shipments.csv
code/data_pk_test/: sales.csv
code/entropy/: clickhouse_manager.py  entropy.py  search_engine.py  shannon_entropy.py  stats_computing.py
code/generation/: sql_view_generator.py
code/inference/: adjacency.py  composite_key.py  functional_group_builder.py  join_candidate.py  key_ranking.py  low_cardinality.py  primary_key.py  primary_to_composite.py  source_structure.py  table_role.py
code/ingestion/: csv_loader.py
code/modeling/: agregation_stability_engine.py  candidate_builder.py  decision_model.py  fact_dimension_builder.py  logical_table_builder.py  model_ranking.py
code/profiling/: basic_profile.py  dimension.py  entropy.py
code/reporting/: __init__.py  certification_report.py
code/semantic/: semantic_engine.py  semantic_homogeneity_engine.py
code/stats/: clickhouse_manager.py  functional_dependency.py  identifiability.py  search_engine.py  stats_computing.py
code/validation/: __init__.py  aggregation_stability_engine.py  aggregation_stability_validator.py  agregation_stability_engine.py  entropy_rule.py  granularity_validator.py  model_certification.py  referential_integrity.py  semantic_homogeneity_validator.py  structural_report.py  structural_validator.py  topology.py
docs/: API_doc.md  API_doc_fr.md  RULES.md  architecture.md  index.md  installation.md  paper.md  release-checklist.md  reproducibility.md  scoring_system.md  technical-reference-fr.md  technical-reference.md  usage.md
docs/tutorials/: climate-ocean.md
examples/: external_project_main.py
tests/: conftest.py  test_csv_loader_helpers.py  test_entropy.py  test_external_project_example.py  test_main.py  test_primary_key.py
tests/core/: test_clickhouse_manager.py  test_csv_loader_helpers.py  test_manager.py  test_meta.py  test_naming.py  test_schema.py
tests/generation/: test_sql_view_generator.py
tests/inference/: test_adjacency.py  test_composite_key.py  test_functional_group_builder.py  test_join_candidate.py  test_key_ranking.py  test_primary_key.py  test_source_structure.py  test_table_role.py
tests/ingestion/: test_csv_loader.py
tests/integration/: test_e2e_pipeline.py
tests/modeling/: test_candidate_builder.py  test_fact_dimension_builder.py  test_logical_table_builder.py  test_model_ranking.py
tests/profiling/: test_basic_profile.py
(+16 files in other folders)
