[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kawakiri"
version = "0.1.0"
description = "Open-source reverse-engineering library for decision model inference"
authors = [
    {name = "AMSE & Koushin"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "reverse-engineering",
    "decision-modeling",
    "data-profiling",
    "clickhouse",
    "dimensional-modeling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "clickhouse-connect",
    "colorama",
    "rapidfuzz",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/houda897/projet-kawakiri"

[project.scripts]
kawakiri = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mkdocs",
    "mkdocs-material",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.setuptools]
package-dir = {"" = "code"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["code"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "code"
]

[tool.pyright]
extraPaths = ["code"]
